# server-ux

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
announcement/: README.rst  __manifest__.py
announcement/i18n/: announcement.pot  es.po  it.po
announcement/models/: announcement.py  announcement_tag.py  res_users.py
announcement/readme/: CONTRIBUTORS.md
announcement/tests/: __init__.py  test_announcement.py
announcement/views/: announcement_tag_views.xml  announcement_views.xml
announcement/wizards/: read_announcement_wizard.xml
barcode_action/: README.rst  __manifest__.py
barcode_action/i18n/: barcode_action.pot
base_cancel_confirm/: README.rst  __manifest__.py
base_cancel_confirm/i18n/: base_cancel_confirm.pot  es.po  it.po  nl.po
base_custom_filter/: README.rst  __manifest__.py
base_export_manager/: README.rst  __manifest__.py  hooks.py
base_import_security_group/: README.rst  __manifest__.py
base_menu_visibility_restriction/: README.rst
base_optional_quick_create/: README.rst  __manifest__.py
base_search_custom_field_filter/: README.rst  __manifest__.py
base_substate/: README.rst  __manifest__.py
base_tier_validation/: README.rst  __manifest__.py
base_tier_validation_formula/: README.rst  __manifest__.py
base_tier_validation_forward/: README.rst  __manifest__.py  hooks.py
base_tier_validation_server_action/: README.rst  __manifest__.py
chained_swapper/: README.rst  __manifest__.py  hooks.py
date_range_account/: README.rst  __manifest__.py
default_multi_user/: README.rst  __manifest__.py  hooks.py
document_quick_access/: README.rst  __manifest__.py
document_quick_access_folder_auto_classification/: README.rst  __manifest__.py
filter_multi_user/: README.rst  __manifest__.py
mail_message_destiny_link_template/: README.rst  __manifest__.py
mail_suggested_recipient_unchecked/: README.rst  __manifest__.py
multi_step_wizard/: README.rst  __manifest__.py
sequence_check_digit/: README.rst  __manifest__.py
sequence_reset_period/: README.rst  __manifest__.py
server_action_mass_edit/: README.rst  __manifest__.py
server_action_mass_edit_onchange/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
template_content_swapper/: README.rst  __manifest__.py
(+235 files in other folders)
